...
        android:id="@+id/include5"
        layout="@layout/activity_nav_bar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <EditText
        android:id="@+id/forum_board_new_task_deadline"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:hint="Deadline (MMDDYYYY)"
        android:maxLength="8"
...
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider6"
        app:layout_constraintVertical_bias="0.523" />

    <EditText
        android:id="@+id/forum_board_new_task_expected"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:hint="Expected days to complete"
        android:inputType="number"
...
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider4"
        app:layout_constraintVertical_bias="0.526" />

    <EditText
        android:id="@+id/forum_board_new_task_title"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:hint="Title"
        android:inputType="text"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider3" />

    <EditText
        android:id="@+id/forum_board_new_task_body"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:background="@null"
        android:ems="10"
        android:gravity="top|start"
        android:hint="Body"
...
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forum_board_divider"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/forum_board_new_task_reward"
        android:layout_width="320dp"
        android:layout_height="23dp"
        android:background="@null"
        android:ems="10"
        android:hint="Reward"
        android:inputType="text"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.104" />

    <ImageView
        android:id="@+id/forum_board_new_task_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
...
